--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/gcushen/hugo-academic.git
 [submodule "public"]
 	path = public
-	url = https://github.com/bretsw/bretsw.github.io.git
+	url = git@github.com:bretsw/bretsw.github.io.git
 	branch = master
 [submodule "themes/hugo-academic"]
 	path = themes/hugo-academic
