--- a/config.toml
+++ b/config.toml
@@ -256,12 +256,12 @@ enableGitInfo = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.com/citations?user=P-65wkIAAAAJ&hl=en"
+    link = "//scholar.google.com/citations?user=P-65wkIAAAAJ&hl=en"
 
   [[params.social]]
     icon = "list-alt"
     icon_pack = "fa"
-    link = "//bretsw.com/cv"
+    link = "http://bretsw.com/cv/"
 
 
 
