--- a/config.toml
+++ b/config.toml
@@ -261,7 +261,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "list-alt"
     icon_pack = "fa"
-    link = "https://bretsw.github.io/files/cv.pdf"
+    link = "https://bretsw.github.io/post/cv/"
 
 
 
@@ -279,24 +279,29 @@ enableGitInfo = false
   weight = 1
 
 [[menu.main]]
+  name = "CV"
+  url = "https://bretsw.github.io/post/cv/"
+  weight = 2
+
+[[menu.main]]
   name = "Publications"
   url = "#publications"
-  weight = 2
+  weight = 3
 
 [[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Posts"
   url = "#posts"
-  weight = 5
+  weight = 6
 
 # Taxonomies.
 [taxonomies]
