--- a/.gitmodules
+++ b/.gitmodules
@@ -7,4 +7,4 @@
 	branch = master
 [submodule "themes/hugo-academic"]
 	path = themes/hugo-academic
-	url = https://github.com/gcushen/hugo-academic.git
+	url = https://github.com/gcushen/hugo-academic
