--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ title = "bretsw"
 # To display a copyright symbol, type `&copy;`.
 copyright = "&copy; 2019"
 
-theme = "hugo-academic"
+theme = "academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
