--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,7 +10,7 @@
 
 [[main]]
   name = "CV"
-  url = "#cv"
+  url = "cv/"
   weight = 20
 
 [[main]]
@@ -19,24 +19,19 @@
   weight = 30
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 40
-
-[[main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 50
+  weight = 40
 
 [[main]]
   name = "Posts"
   url = "#posts"
-  weight = 60
+  weight = 50
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
