--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,11 +12,12 @@ title = "bretsw"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://bretsw.github.io/"
+baseurl = "http://bretsw.com/"
 
 # Enter a copyright notice to display in the site footer.
-# To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; {year}"
+# To display a copyright symbol, type `&copy;`. 
+# For current year, type `{year}`.
+copyright = "[CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
