--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,11 +8,11 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "bretsw"
+title = "Digital space of K. Bret Staudt Willet"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "http://bretsw.com/"
+baseurl = "https://bretsw.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. 
@@ -20,7 +20,7 @@ baseurl = "http://bretsw.com/"
 copyright = "[CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-175688178-1"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
