--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,29 +14,34 @@
   weight = 20
 
 [[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 30
+
+[[main]]
   name = "Publications"
   url = "#featured"
-  weight = 30
+  weight = 40
 
 [[main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Posts"
   url = "#posts"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Tech"
   url = "tech/"
-  weight = 60
+  weight = 70
   
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
