--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,7 +12,7 @@ title = "Digital space of K. Bret Staudt Willet"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://bretsw.com/"
+baseurl = "http://bretsw.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. 
